--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html {
-  background: rgba(0, 34, 75, 0.6);
+  background: rgba(133, 165, 204, 1);
 }
 
 a {
@@ -7,8 +7,10 @@ a {
   margin-top: 5px;
 }
 
-.x {
-  display: inline;
-  height: 20px;
-  width: 20px;
+button {
+  margin: 2px;
+}
+
+body {
+  background: rgba(208, 228, 242, 1);
 }
