picked a header gif, and labeled types of chat rooms

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,19 @@
-<h1>{{ title }}</h1>
+<header>
+    <h1>{{ title }}</h1>
+    <form action="/registry" method="GET">
+        <button name="logIn" value='login'>Log In</button>
+        <button name="signUp" value='signup'>Sign Up</button>
+    </form>
+</header>
+<nav>
+    <a href="#">HOME</a>
+    <a href="#">ABOUT ME</a>
+    <a href="#">CONTACT ME</a>
+</nav>
+<h3>All Chat Rooms</h3>
+<h5>Politics</h5>
+<h5>Religion</h5>
+<h5>Sports</h5>
+<h5>Music</h5>
+<h5>Daily Query</h5>
+<h5>Random Chat Room</h5>
