Preping header for all increments of webpage

--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,27 @@
 header {
   width:18%;
-  height: 6em;
+  height: 7em;
   background: url("http://orig00.deviantart.net/6229/f/2013/114/8/5/gggggggggg_by_bensuit-d62v1ey.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   color: orange;
-  display:block;
+  display:inline-block;
+}
+
+header>form {
+  display: inline-block;
+}
+
+nav {
+  display:inline-block;
+  vertical-align: bottom;
+}
+
+#chatForum {
+  width:20em;
+  height:20em;
+  border:1px solid grey;
 }
 /*http://orig00.deviantart.net/6229/f/2013/114/8/5/gggggggggg_by_bensuit-d62v1ey.gif*/
 /*http://sdeerwallpaper.com/Cool-Wallpapers/team-valor-backgrounds-Is-Cool-Wallpapers.jpg*/
