--- a/views/defHeader.hbs
+++ b/views/defHeader.hbs
@@ -8,11 +8,9 @@
     </form>
 </header>
 <nav>
-    <a href="/">HOME</a>
+    <a href="#">HOME</a>
     <a href="#">HOW TO</a>
     <a href="#">ABOUT ME</a>
     <a href="#">CONTACT ME</a>
 </nav>
 <hr>
-<p>window shop</p>
-
