--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
         <button name="logIn">Log In</button>
     </form>
     <form action="/signup" method="GET">
-        <button name="signUn">Sign Up</button>
+        <button name="signUp">Sign Up</button>
     </form>
 </header>
 <nav>
@@ -14,5 +14,9 @@
     <a href="#">CONTACT ME</a>
 </nav>
 <hr>
-<p>window shop</p>
 
+<form action='/userName' method='POST'>
+  <input type='text' name='userName' placeholder='Username'>
+  <input type='text' name='passWord' placeholder='Password'>
+  <button>Sign In</button>
+</form>
