--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -4,7 +4,7 @@
         <button name="logIn">Log In</button>
     </form>
     <form action="/signup" method="GET">
-        <button name="signUn">Sign Up</button>
+        <button name="signUp">Sign Up</button>
     </form>
 </header>
 <nav>
@@ -14,5 +14,3 @@
     <a href="#">CONTACT ME</a>
 </nav>
 <hr>
-<p>window shop</p>
-
