--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -14,3 +14,19 @@
     <a href="#">CONTACT ME</a>
 </nav>
 <hr>
+
+<form action='/createProfile' method='POST' id="regForm">
+  <label for="FirstName">First Name:</label>
+  <input type='text' name='firstName' placeholder='First Name'><br>
+  <label for="M.I.">Middle Init:</label>
+  <input type='text' name='midInit' placeholder='Middle Initial'><br>
+  <label for="LastName">Last Name:</label>
+  <input type='text' name='lastName' placeholder='Last Name'><br>
+  <label for="userName">User Name:</label>
+  <input type='text' name='userName' placeholder='Username'><br>
+  <label for="password">Password:</label>
+  <input type='text' name='password' placeholder='Password'><br>
+  <label for="email">Email:</label>
+  <input type='text' name='emailAddress' placeholder='Email Address'><br>
+  <button>Submit</button>
+</form>
