--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -18,7 +18,7 @@
 <form action='/createProfile' method='POST' id="regForm">
   <label for="FirstName">First Name:</label>
   <input type='text' name='firstName' placeholder='First Name'><br>
-  <label for="M.I.">Middle Init:</label>
+  <label for="midInit">Middle Init:</label>
   <input type='text' name='midInit' placeholder='Middle Initial'><br>
   <label for="LastName">Last Name:</label>
   <input type='text' name='lastName' placeholder='Last Name'><br>
