--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,10 @@
 <header>
     <h1>{{ title }}</h1>
     <form action="/login" method="GET">
-        <button name="logIn">Log In</button>
+        <button>Log In</button>
     </form>
     <form action="/signup" method="GET">
-        <button name="signUp">Sign Up</button>
+        <button>Sign Up</button>
     </form>
 </header>
 <nav>
@@ -13,8 +13,14 @@
     <a href="#">ABOUT ME</a>
     <a href="#">CONTACT ME</a>
 </nav>
+{{# each memberUse }}
+    <div id="userId">
+        <h5>{{ this.fullName }}</h5>
+        <h5>{{this._id}}</h5>
+        <h5>{{this.userName}}</h5>
+    </div>
+{{/each}}
 <hr>
-
 <form action='/memLogin' method='POST'>
   <input type='text' name='userNameEntry' placeholder='Username'>
   <input type='text' name='passWordEntry' placeholder='Password'>
