--- a/views/memLogin.hbs
+++ b/views/memLogin.hbs
@@ -1,10 +1,10 @@
 <header>
     <h1>{{ title }}</h1>
     <form action="/login" method="GET">
-        <button name="logIn">Log In</button>
+        <button>Log In</button>
     </form>
     <form action="/signup" method="GET">
-        <button name="signUp">Sign Up</button>
+        <button>Sign Up</button>
     </form>
 </header>
 <nav>
@@ -13,20 +13,23 @@
     <a href="#">ABOUT ME</a>
     <a href="#">CONTACT ME</a>
 </nav>
-<hr>
-
-<h3>All Chat Rooms</h3>
-<h5>Politics</h5>
-<h5>Religion</h5>
-<h5>Sports</h5>
-<h5>Technology</h5>
-<h5>Console Gaming</h5>
-<h5>Troll and War Room</h5>
-<h5>Daily Query</h5>
-<h5>Random Chat</h5>
-
-<div id="chatForum">
 {{# each memberUse }}
-    {{ this.fullName }} <p>has this number: {{this._id}}
+    <div id="userId">
+        <h5>{{ this.fullName }}</h5>
+        <h5>{{this._id}}</h5>
+        <h5>{{this.userName}}</h5>
+    </div>
+<hr>
+<h3 id="allChat">All Chat Rooms</h3>
+<ul id="chatLodges">
+    <li><h5><a href="#">Politics</a></h5></li>
+    <li><h5><a href="#">Religion</a></h5></li>
+    <li><h5><a href="#">Sports</a></h5></li>
+    <li><h5><a href="#">Technology</a></h5></li>
+    <li><h5><a href="#">Console Gaming</a></h5></li>
+    <li><h5><a href="#">Troll and War Room</a></h5></li>
+    <li><h5><a href="#">Daily Query</a></h5></li>
+    <li><h5><a href="#">Random Chat</a></h5></li>
+</ul>
+
 {{/each}}
-</div>
