--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 body {
+  background: lightblue;
   width: 100%;
 }
 
@@ -30,6 +31,22 @@ nav {
 nav>a {
   padding-left:1em;
   padding-right:.5em;
+}
+
+.chatBox {
+  background:white;
+  width:30em;
+  height:30em;
+  border:5px solid grey;
+  margin-top:5em;
+  margin:0 auto;
+  display:block;
+}
+
+.chatBox>#chatTitle {
+  color:black;
+  text-align:center;
+  border-bottom:3px solid black;
 }
 
 #regForm {
@@ -77,5 +94,7 @@ nav>a {
   height:20em;
   border:1px solid grey;
 }
+
+
 /*http://orig00.deviantart.net/6229/f/2013/114/8/5/gggggggggg_by_bensuit-d62v1ey.gif*/
 /*http://sdeerwallpaper.com/Cool-Wallpapers/team-valor-backgrounds-Is-Cool-Wallpapers.jpg*/
