--- a/views/memLogin.hbs
+++ b/views/memLogin.hbs
@@ -7,29 +7,30 @@
         <button>Sign Up</button>
     </form>
 </header>
-<nav>
-    <a href="/">HOME</a>
-    <a href="#">HOW TO</a>
-    <a href="#">ABOUT ME</a>
-    <a href="#">CONTACT ME</a>
-</nav>
 {{# each memberUse }}
     <div id="userId">
         <h5>{{ this.fullName }}</h5>
         <h5>{{this._id}}</h5>
         <h5>{{this.userName}}</h5>
     </div>
+<nav>
+    <a href="/">HOME</a>
+    <a href="#">HOW TO</a>
+    <a href="#">ABOUT ME</a>
+    <a href="#">CONTACT ME</a>
+</nav>
+
 <hr>
 <h3 id="allChat">All Chat Rooms</h3>
 <ul id="chatLodges">
-    <li><h5><a href="#">Politics</a></h5></li>
-    <li><h5><a href="#">Religion</a></h5></li>
-    <li><h5><a href="#">Sports</a></h5></li>
-    <li><h5><a href="#">Technology</a></h5></li>
-    <li><h5><a href="#">Console Gaming</a></h5></li>
-    <li><h5><a href="#">Troll and War Room</a></h5></li>
-    <li><h5><a href="#">Daily Query</a></h5></li>
-    <li><h5><a href="#">Random Chat</a></h5></li>
+    <li><h5><a href="/chatRooms/politics?userId={{this._id}}">Politics</a></h5></li>
+    <li><h5><a href="/chatRooms/religion?userId={{this._id}}">Religion</a></h5></li>
+    <li><h5><a href="/chatRooms/sports?userId={{this._id}}">Sports</a></h5></li>
+    <li><h5><a href="/chatRooms/technology?userId={{this._id}}">Technology</a></h5></li>
+    <li><h5><a href="/chatRooms/consoleGaming?userId={{this._id}}">Console Gaming</a></h5></li>
+    <li><h5><a href="/chatRooms/trollnWarRoom?userId={{this._id}}">Troll and War Room</a></h5></li>
+    <li><h5><a href="/chatRooms/dailyQuery?userId={{this._id}}">Daily Query</a></h5></li>
+    <li><h5><a href="/chatRooms/randomChat?userId={{this._id}}">Random Chat</a></h5></li>
 </ul>
 
 {{/each}}
