--- a/views/chatRooms/randomChat.hbs
+++ b/views/chatRooms/randomChat.hbs
@@ -35,4 +35,8 @@
 {{/each}}
 <section class="chatBox">
     <div id="chatTitle"><h5>{{ cTitle }}</h5></div>
+    <ul id="messages"></ul>
+    <form action="" id="formMessage">
+      <input autocomplete="off"><button>Send</button>
+    </form>
 </section>
