--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,10 @@
       src="https://code.jquery.com/jquery-3.1.1.js"
       integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
       crossorigin="anonymous"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
 </head>
 <body>
     {{{ body }}}
