edit button adds 2 input fields and button. clicking submit edit currently posts to db as new entry

--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ a {
 
 button {
   margin: 2px;
+  display: inline
 }
 
 body {
@@ -17,4 +18,9 @@ body {
 
 table {
   background: lightgray;
+}
+
+form {
+  display: inline;
+  margin: 2px;
 }
