--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,11 @@ button {
 
 body {
   background: rgba(208, 228, 242, 1);
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 10px;
+  border-radius: 5px;
 }
 
 table {
@@ -23,4 +28,11 @@ table {
 form {
   display: inline;
   margin: 2px;
+}
+
+#teamslist {
+  margin: 5px;
+  padding: 10px, 5px, 10px, 5px;
+  background: white;
+  border-radius: 5px;
 }
