finished mvp stuff

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,6 @@
-<h1>{{title}}</h1>
+<h1 style='text-align:center;'>{{title}}</h1>
 <div>
-{{#each items}}
-
-{{/each}}
+  <form action='/' style='text-align:center;'>
+    <button id='leave' name='leave'>Leave</button>
+  </form>
 </div>
