--- a/public/style.css
+++ b/public/style.css
@@ -7,10 +7,10 @@ a {
   margin-top: 5px;
 }
 
-button {
+.edit, .x {
   margin: 2px;
   display: inline
-  color: black;
+  border-radius:5px;
 }
 
 span {
