--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,7 @@ body {
 
 table {
   background: lightgray;
+  width: 98% !important;
 }
 
 form {
@@ -35,9 +36,20 @@ form {
 }
 
 #teamslist {
-  margin: 5px;
-  padding: 10px, 5px, 10px, 5px;
+  margin: 5px 0px 5px 0px;
+  padding: 5px;
   background: rgba(255, 246, 229, .8);
   color: rgba(62,69,76, 1);
   border-radius: 5px;
+  width: 98% !important;
+  list-style-type: none;
+}
+
+ul {
+/*  padding: 0;
+  margin: 0;*/
+}
+
+.list {
+  padding-left: 5px;
 }
