--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,24 +1,39 @@
 <h1 style='text-align:center;'>{{title}}</h1>
 
 <form action='/stff' style='text-align:center;'>
-  <button id='listen' name='listen'>Listen</button>
+  <button id='listen' name='listen' class='glyphicon glyphicon-th-list  '></button>
 </form>
 <br>
 <form action='/' style='text-align:center;'>
-  <button id='leave' name='leave'>Leave</button>
+  <button id='leave' name='leave' class='glyphicon glyphicon-home'></button>
 </form>
+<div class='container' style='display:inline-block;'>
+  <div class='row'>
+      <div class='col-lg-7' style='text-align:right;'>
+          <form method='POST' action='/insert'>
+                  <div class='input'>
+                      <input type='text' id='name' name='name' placeholder='Name..'>
+                  </div>
+                  <div class='input'>
+                      <input type='text' id='comment' name='comment' placeholder='Comment..'>
+                  </div>
+                  <button type='submit' class='glyphicon glyphicon-pencil'></button>
+          </form>
+      </div>
+  </div>
+</div>
 
 <div>
 {{#each posts}}
   <p class='origPost'><span style='font-weight:bold; font-size: 20px;'>{{this.name}}</span> : {{this.comment}}</p>
   {{!-- <form method='post' action='/edit' --}}
   <form method='POST' action='/posts/{{this._id}}/delete'>
-    <button id='delete' name='delete' value={{this._id}}>Delete</button>
+    <button id='delete' name='delete' value={{this._id}} class='glyphicon glyphicon-trash'></button>
   </form>
-  <form method='POST' action='/posts/{{this._id}}/change'>
+  <form method='POST' action='/posts/{{this._id}}/change' autocomplete="off">
     <input type='text' id='name' name='name' placeholder={{this.name}}>
     <input type='text' id='comment' name='comment' placeholder={{this.comment}}>
-    <button id='change' name='change' value={{this._id}}>Change</button>
+    <button id='change' name='change' value={{this._id}} class='glyphicon glyphicon-pencil'></button>
   </form>
   </br>
 {{/each}}
