added dates and turned off another autocomplete

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,21 +1,20 @@
 
 <body style='background-image: url("http://www.publicdomainpictures.net/pictures/190000/velka/black-and-white-brick-wall-1468627741Lmx.jpg")';>
-<div>
-</div>
+  <div>By Baokhoa Vu</div>
 
-<div class='jumbotron' style='border: 1px solid black;'>
-  <form action='/' style='text-align:center;'>
-    <button id='leave' name='leave' class='glyphicon glyphicon-home'></button>
-  </form>
-  <div class='container' style='text-align: center;'>
-    <h1>{{title}}</h1>
-    <p style='font-weight:bold;'>The Wall Listens and Remembers What You Tell It</p>
-    <br>
-    <p style='font-weight:bold;'>The Wall Lets You Read What's Written On It</p>
-    <br>
-    <p style='font-weight:bold;'>The Wall Lets You Change Things Written</p>
-    <br>
-    <p style='font-weight:bold;'>The Wall Lets You Erase Things Forever</p>
+  <div class='jumbotron' style='border: 1px solid black;'>
+    <form action='/' style='text-align:center;'>
+      <button id='leave' name='leave' class='glyphicon glyphicon-home'></button>
+    </form>
+    <div class='container' style='text-align: center;'>
+      <h1>{{title}}</h1>
+      <p style='font-weight:bold;'>The Wall Listens and Remembers What You Tell It</p>
+      <br>
+      <p style='font-weight:bold;'>The Wall Lets You Read What's Written On It</p>
+      <br>
+      <p style='font-weight:bold;'>The Wall Allows Changing Things But Remembers</p>
+      <br>
+      <p style='font-weight:bold;'>The Wall Lets You Erase Things Forever</p>
+    </div>
   </div>
-</div>
 </body>
