change edit comment

--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -33,7 +33,7 @@
     </form>
     <form method='POST' action='/posts/{{this._id}}/change' autocomplete="off">
       <input type='text' id='name' name='name' placeholder={{this.name}}>
-      <input type='text' id='comment' name='comment' placeholder={{this.comment}}>
+      <input type='text' id='comment' name='comment' placeholder='. . .'>
       <button id='change' name='change' value={{this._id}} class='glyphicon glyphicon-pencil'></button>
     </form>
     </br>
