added voting without counters soontobe

--- a/public/style.css
+++ b/public/style.css
@@ -20,3 +20,11 @@ div {
   position: relative;
   background-image: url('http://www.killadj.com/blog/wp-content/uploads/2013/07/Background_brick_wall-1024x678.jpg');
 }
+
+.makeRed {
+  color: red;
+}
+
+.makeOrange {
+  color: orange;
+}
