--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -27,15 +27,18 @@
   <div>
   {{#each posts}}
     <p class='origPost'><span style='font-weight:bold; font-size: 20px;'>{{this.name}}</span>: {{this.comment}}</p>
-    <p class='dateAdd'><span style='font-weight:bold;'>Date</span>: {{this.date}}</p>
-    <form method='POST' action='/posts/{{this._id}}/delete'>
-      <button id='delete' name='delete' value={{this._id}} class='glyphicon glyphicon-trash'></button>
-    </form>
     <form method='POST' action='/posts/{{this._id}}/change' autocomplete="off">
       <input type='text' id='name' name='name' placeholder={{this.name}}>
       <input type='text' id='comment' name='comment' placeholder='. . .'>
       <button id='change' name='change' value={{this._id}} class='glyphicon glyphicon-pencil'></button>
     </form>
+    <form method='POST' action='/posts/{{this._id}}/delete'>
+      <button id='delete' name='delete' value={{this._id}} class='glyphicon glyphicon-trash'></button>
+    </form>
+    <p class='dateAdd'><span style='font-weight:bold;'>Date</span>: {{this.date}}</p>
+    <div id='vote'>
+      <div><span id='upVote' class='glyphicon glyphicon-arrow-up'></span><span id='downVote' class='glyphicon glyphicon-arrow-down'></span></div>
+    </div>
     </br>
   {{/each}}
   </div>
