--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ div {
   width: 800px ;
   margin: auto;
   position: relative;
-  background-image: url('http://www.killadj.com/blog/wp-content/uploads/2013/07/Background_brick_wall-1024x678.jpg');
+  background-image: url('http://manohome.com/wp-content/uploads/2015/07/interior-drop-dead-gorgeous-stone-grey-brick-wall-for-home-wall-decoration-ideas-divine-images-of-home-interior-wall-with-grey-brick-wall-936x749.jpg');
 }
 
 .makeRed {
