--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -15,7 +15,7 @@
                     <div class='input'>
                         <input type='text' id='name' name='name' placeholder='Name..'>
                         <input type='text' id='comment' name='comment' placeholder='Comment..'>
-                    <button type='submit' class='glyphicon glyphicon-pencil'></button>
+                    <button type='submit' class='glyphicon glyphicon-plus'></button>
                     {{!-- </div>
                     <div class='input'>
                     </div> --}}
