--- a/views/editPages/editPassword.hbs
+++ b/views/editPages/editPassword.hbs
@@ -9,8 +9,8 @@
 </header>
     <div id="userId">
         <h5>{{ memberUse.fullName }}</h5>
-        <h5>{{ memberUse._id }}</h5>
-        <h5>{{ memberUse.userName }}</h5>
+        <h5>{{ memberUse._id}}</h5>
+        <h5>{{ memberUse.userName}}</h5>
         <form action="/accountEdit/userId={{ memberUse._id }}" method="post">
             <button>Account</button>
         </form>
@@ -37,14 +37,18 @@
     <li><h5><a href="/dailyQuery?userId={{ memberUse._id }}">Daily Query</a></h5></li>
     <li><h5><a href="/randomChat?userId={{ memberUse._id }}">Random Chat</a></h5></li>
 </ul>
-<section class="chatBox">
-    <div id="chatTitle"><h5>Technology</h5></div>
-    <ul id="messages">
-        {{# each Forum}}
-            <li>{{ this.comment }}</li>
-        {{/each}}
-    </ul>
-    <form action="/technology/userId={{ memberUse._id }}" method="post" id="formMessage">
-      <input id="m" autocomplete="off" name="instMess"><button>Send</button>
-    </form>
-</section>
+
+<div id="profileEdit">
+  <ul id="acctEdit">
+    <br><p>Profile Details</p>  <a id= "editAll" href="editEmail?userId={{ memberUse._id }}">Edit All</a><br>
+      <li><h4>First Name: {{ memberUse.firstName }} <a href="editFirstName?userId={{ memberUse._id }}">Edit</a></h4></li>
+      <li><h4>Middle Init: {{ memberUse.midInit }} <a href="editMidInit?userId={{ memberUse._id }}">Edit</a></h4></li>
+      <li><h4>Last Name: {{ memberUse.lastName }} <a href="editLastName?userId={{ memberUse._id }}">Edit</a></h4></li>
+      <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
+      <li><h4>Password: <form action="/editPassword" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
+      <li><h4>Email: {{ memberUse.email }} <a href="editEmail?userId={{ memberUse._id }}">Edit</a></h4></li>
+  <form action="" method="">
+    <button>Delete Account</button>
+  </form>
+  </ul>
+</div>
