--- a/views/editPages/editPassword.hbs
+++ b/views/editPages/editPassword.hbs
@@ -47,8 +47,8 @@
       <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Password: <form action="/editPassword" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
       <li><h4>Email: {{ memberUse.email }} <a href="editEmail?userId={{ memberUse._id }}">Edit</a></h4></li>
-  <form action="" method="">
-    <button>Delete Account</button>
+  <form action="/delProfile" method="post">
+    <button name='deleteBtn' value="{{ memberUse.userName }}">Delete Account</button>
   </form>
   </ul>
 </div>
