--- a/views/editPages/editLastName.hbs
+++ b/views/editPages/editLastName.hbs
@@ -47,8 +47,8 @@
       <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Password: {{ memberUse.password }} <a href="editPassword?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Email: {{ memberUse.email }} <a href="editEmail?userId={{ memberUse._id }}">Edit</a></h4></li>
-  <form action="" method="">
-    <button>Delete Account</button>
+  <form action="/delProfile" method="post">
+    <button name='deleteBtn' value="{{ memberUse.userName }}">Delete Account</button>
   </form>
   </ul>
 </div>
